--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 
     <!-- HTML Meta Tags -->
-
+<title>Marco Coralde</title>
 <meta name="description" content="Elevate your brand and achieve your goals with my freelance expertise!  Discover a wide range of tailored services designed to fit your budget and vision. My portfolio showcases my proven track record and passion for excellence. Let's collaborate and make magic happen.✨">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://marcocoralde.github.io/website.portfolio/">
+<meta property="og:url" content="https://marcocoralde.github.io/website.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Marco Coralde">
 <meta property="og:description" content="Elevate your brand and achieve your goals with my freelance expertise!  Discover a wide range of tailored services designed to fit your budget and vision. My portfolio showcases my proven track record and passion for excellence. Let's collaborate and make magic happen.✨">
@@ -22,7 +22,7 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="marcocoralde.github.io">
-<meta property="twitter:url" content="https://marcocoralde.github.io/website.portfolio/">
+<meta property="twitter:url" content="https://marcocoralde.github.io/website.com/">
 <meta name="twitter:title" content="Marco Coralde">
 <meta name="twitter:description" content="Elevate your brand and achieve your goals with my freelance expertise!  Discover a wide range of tailored services designed to fit your budget and vision. My portfolio showcases my proven track record and passion for excellence. Let's collaborate and make magic happen.✨">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/ead54bb8-190a-413a-9baf-0abe50770d7a.png?token=e7YSXE68-wMl61m31Sd19fu_7CpGFeooIIGDZWnWuds&height=600&width=1200&expires=33242430809">
@@ -55,6 +55,7 @@
         @media screen and (max-width: 20000px) {
             img {
                 margin-top: 20px; /* Adjust margin for smaller screens */
+                display: none;
                 
             }
         }
@@ -106,8 +107,8 @@
             // Reload 10 seconds before redirect
             setInterval(function () {
                 window.location.reload();
-            }, 10000); window.location.href = 'https://marcocoralde.github.io/website.portfolio/';
-        }, 2000); // 8000 milliseconds = 8 seconds
+            }, 10000); window.location.href = 'https://marcocoralde.github.io/logo.com/';
+        }, 0.0000001000); // 8000 milliseconds = 8 seconds
     </script>
 
 </body>
